bdr.BDR.scala.error
Erreur de compilation :
BDR:3: error: identifier expected but string literal found.
  if (litMessage():String == "R" ) {droite();avance()};
                             ^BDR:11: error: ')' expected but '}' found.
  if (litMessage():String == "X") {recule();recule();recule()}}; 
                                                              ^